data/derived/comb/progs/unify/prog6612.ml.out
Characters 81-104:
  |h::t->bigAdd (mulByDigit h l4) (multHelper t l4 (x+1));;
                                  ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
